aggiunto client, corretto tab client connessi, aggiunta implementazione broadcast, lettura e scrittura base